# WinDown3000

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
installer/: sfx_config.txt  windown3000.iss
resources/: windown3000.qrc  windown3000.rc
src/: Document.cpp  Document.h  Editor.cpp  Editor.h  FindReplaceDialog.cpp  FindReplaceDialog.h  MainWindow.cpp  MainWindow.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h  MarkdownRenderer.cpp  MarkdownRenderer.h  Preferences.cpp  Preferences.h  PreferencesDialog.cpp  PreferencesDialog.h  PreviewWidget.cpp  PreviewWidget.h  ThemeParser.cpp  ThemeParser.h  main.cpp
tests/: test_document.cpp  test_editor.cpp  test_find_replace.cpp  test_markdown_renderer.cpp  test_preferences.cpp  test_theme_parser.cpp
